[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "genice2_cage/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["genice2_cage"]

[project]
dynamic = ["version"]
name = "genice2-cage"

[project.urls]
Homepage = "https://github.com/vitroid/genice-cage"

[tool.genice.urls]
repository = "https://github.com/vitroid/GenIce"
logo = "https://raw.githubusercontent.com/vitroid/GenIce/develop/logo/genice-v0.png"

[tool.poetry]
name = "genice2-cage"
version = "2.4.4" # for GenIce2.2
description = "A format plugin for GenIce2 to detect cages."
authors = ["vitroid <vitroid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
GenIce2 = "^2.2.5.2"
graphstat = "^0.3.3"
yaplotlib = "^0.1.2"
numpy = ">=1.26.4"
networkx = ">=3.2.1"
cycless = ">=0.6.3"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.3"
toml = "^0.10.2"

[tool.poetry.plugins.genice2_format]
cage = "genice2_cage.formats.cage"

