[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "genice2-cage"
version = "2.6"  # for GenIce2.2
description = "A format plugin for GenIce2 to detect cages."
authors = [{ name = "vitroid", email = "vitroid@gmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies"]

[project.urls]
Homepage = "https://github.com/vitroid/genice-cage"

[project.entry-points."genice2_format"]
cage = "genice2_cage.formats.cage"

[tool.genice.urls]
repository = "https://github.com/vitroid/GenIce"
logo = "https://raw.githubusercontent.com/vitroid/GenIce/develop/logo/genice-v0.png"

[tool.poetry]
packages = [{ include = "genice2_cage" }]

[tool.poetry.dependencies]
python = "^3.10"
GenIce2 = "^2.2.5.2"
graphstat = "^0.3.3"
yaplotlib = "^0.1.2"
numpy = ">=1.26.4"
networkx = ">=3.2.1"
cycless = ">=0.6.3"

[tool.poetry.group.dev.dependencies]
jinja2 = "^3.1.3"
toml = "^0.10.2"


